--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "kimmeh <mhko0411@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "http-server . -c-1"
+    "start": "http-server . -p 3000 -c-1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
